--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name www.casinovodka.store;
+    server_name www.limewin.ru;
     
     gzip on;
     gzip_types text/css application/javascript application/json image/svg+xml;
